#UTILIDADES.yaml
#UTILIDADES
apiVersion: apps/v1
kind: Deployment
metadata:
  name: utilidades
  labels:
    app: utilidades
spec:
  replicas: 1
  selector:
    matchLabels:
      app: utilidades
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: utilidades
    spec:
      containers:
        - name: utilidades
          image: us-central1-docker.pkg.dev/deliveryandlogistic/deliveryandlogistic-images/utilidades:v1.0.0
          ports:
            - containerPort: 3004
          imagePullPolicy: Always
      volumes:
        - name: appsecrets-volume
          secret:
            secretName: appsecrets
---
#--- SERVICE UTILIDADES
kind: Service
apiVersion: v1
metadata:
  name: servicio-utilidades
  annotations:
    cloud.google.com/backend-config: '{"default": "utilidades-config"}'  
spec:
  type: NodePort
  selector:
    app: utilidades
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3004
      nodePort: 31023
#--- UTILIDADES
---
